cloud/yamls/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: europe-west1-docker.pkg.dev/trabantparking-stage/docker-repo/backend-server:1.0.8
        ports:
        - containerPort: 3015
        readinessProbe:
          httpGet:
            path: /defects
            port: 3015
          initialDelaySeconds: 5
          periodSeconds: 10
