cloud/yamls/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: europe-west1-docker.pkg.dev/trabantparking-stage/docker-repo/frontend-server:1.0.8
        ports:
        - containerPort: 3000
